# FILIC

./: .gitmodules  README.md  infer.py  install.sh  pyproject.toml  requirements.txt  train.py
configs/: airbot_play_force_peg_in_hole.py
filic/: basic.py  basis.py  convert_data.py  filic.py
patch/: airbot_play_mujoco_env.py  policy_evaluate_wrapper.py
